# sparrow

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  codecov.yml  conanfile.py  doxide.yaml  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  ignorelist_asan.supp  jupyterlite_build_environment.yml  sparrowConfig.cmake.in  vcpkg.json
benchmarks/: CMakeLists.txt  README.md  TARGETS.md  bench_dynamic_bitset.cpp  bench_fixed_width_binary_array.cpp  bench_null_count_policy.cpp  bench_primitive_array.cpp  bench_std_vector.cpp  configure_benchmarks.ps1  configure_benchmarks.sh  main.cpp  test_config.cmake
benchmarks/comparative/: CMakeLists.txt  README.md  benchmark_primitive.cpp  primitive_build_compare.cpp
c_data_integration_tests/: CMakeLists.txt
c_data_integration_tests/include/sparrow/c_data_integration/: config.hpp
c_data_integration_tests/src/: c_data_integration.cpp
cmake/: clang-format.cmake  clang-tidy.cmake  code_coverage.cmake  compile_options.cmake  compiles_options.cmake  external_dependencies.cmake  sanitizers.cmake
conan_test_package/: CMakeLists.txt  conanfile.py  json_reader_test.cpp  main.cpp
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: array.md  basic_usage.md  builder.md  dev_build.md  installation.md  layouts.md  main_page.md  record_batch.md  typed_array.md
examples/: CMakeLists.txt  SAVE.cpp  array_builder.cpp  builder_example.cpp  hello_world.cpp  list_layout.cpp  printer.hpp  record_batch_example.cpp  timestamp_example.cpp  typed_array.cpp  typed_array_high_level.cpp  typed_array_low_level.cpp  ultimate_builder.cpp
examples/builder/: builder.hpp  builder_utils.hpp  printer.hpp
json_reader/: CMakeLists.txt  sparrow-json-readerConfig.cmake.in
json_reader/include/sparrow/json_reader/: binary_parser.hpp  binaryview_parser.hpp  bool_parser.hpp  comparison.hpp  config.hpp  constant.hpp  decimal_parser.hpp  fixedsizebinary_parser.hpp  fixedsizelist_parser.hpp  json_parser.hpp  list_parser.hpp  listview_parser.hpp  map_parser.hpp  null_parser.hpp  primitive_parser.hpp  run_end_encoded_parser.hpp  string_parser.hpp  struct_parser.hpp  temporal_parser.hpp  union_parser.hpp  utils.hpp
json_reader/src/: binary_parser.cpp  binaryview_parser.cpp  bool_parser.cpp  comparison.cpp  decimal_parser.cpp  fixedsizebinary_parser.cpp  fixedsizelist_parser.cpp  json_parser.cpp  list_parser.cpp  listview_parser.cpp  map_parser.cpp  null_parser.cpp  primitive_parser.cpp  run_end_encoded_parser.cpp  string_parser.cpp  struct_parser.cpp  temporal_parser.cpp  union_parser.cpp  utils.cpp
json_reader/test/: CMakeLists.txt  test_json_reader.cpp
json_reader/test/c_data_integration/: test_c_data_integration.cpp
json_reader/test/resources/jsons/: custom-metadata.json  decimal32.json  decimal64.json  duplicate_fieldnames.json  extension.json  interval_mdn.json  primitive_large_offsets.json  recursive-nested.json
notebooks/: sparrow_xeus_cpp_lite.ipynb
src/: array.cpp  array_factory.cpp  array_helper.cpp  array_iterator.cpp  bool8_array.cpp  (+13 more)
test/: .clang-tidy  CMakeLists.txt  array_data_creation.cpp  array_data_creation.hpp  arrow_array_schema_creation.hpp  better_junit_reporter.hpp  external_array_data_creation.cpp  external_array_data_creation.hpp  junit.hpp  junit_xml_writer.hpp  layout_tester.hpp  main.cpp  metadata_sample.hpp  nanoarrow_utils.hpp  osx_compilation_fail_reproduce.cpp  test_algorithm.cpp  test_all_layouts_mandatory_methods.cpp  test_allocator.cpp  test_any_data.cpp  test_any_data_utils.cpp  test_array.cpp  test_array_data.cpp  test_array_data_concepts.cpp  test_array_data_creation.cpp  test_array_data_factory.cpp  test_array_data_to_arrow_array_converters.cpp  test_array_registry.cpp  test_array_wrapper.cpp  test_arrow_array.cpp  test_arrow_array_schema_factory.cpp  test_arrow_array_schema_proxy.cpp  test_arrow_array_schema_utils.cpp  test_arrow_array_stream_proxy.cpp  test_arrow_length.cpp  test_arrow_schema.cpp  test_binary_array.cpp  test_bit.cpp  test_bit_vector.cpp  test_bool8_array.cpp  test_buffer.cpp  (+77 more)
test/backtrace/: CMakeLists.txt
test/backtrace/include/: backtrace.hpp
test/backtrace/src/: backtrace.cpp
test/backtrace/test/: test_backtrace.cpp
test/c_data_integration/: CMakeLists.txt  test_c_data_integration.cpp
test/c_data_integration/include/sparrow/c_data_integration/: binary_parser.hpp  binaryview_parser.hpp  bool_parser.hpp  c_data_integration.hpp  comparison.hpp  constant.hpp  decimal_parser.hpp  fixedsizebinary_parser.hpp  fixedsizelist_parser.hpp  json_parser.hpp  list_parser.hpp  listview_parser.hpp  map_parser.hpp  null_parser.hpp  primitive_parser.hpp  run_end_encoded_parser.hpp  string_parser.hpp  stringview_parser.hpp  struct_parser.hpp  temporal_parser.hpp  union_parser.hpp  utils.hpp
test/c_data_integration/src/: binary_parser.cpp  binaryview_parser.cpp  bool_parser.cpp  c_data_integration.cpp  comparison.cpp  decimal_parser.cpp  fixedsizebinary_parser.cpp  fixedsizelist_parser.cpp  json_parser.cpp  list_parser.cpp  listview_parser.cpp  map_parser.cpp  null_parser.cpp  primitive_parser.cpp  run_end_encoded_parser.cpp  string_parser.cpp  stringview_parser.cpp  struct_parser.cpp  temporal_parser.cpp  union_parser.cpp  utils.cpp
test/c_data_integration/test_c_data_integration/: CMakeLists.txt  test_c_data_integration.cpp  test_utils.cpp
test/c_data_integration/test_c_data_integration/jsons/: dictionary-unsigned.json  interval.json  list_view.json  null-trivial.json  primitive.json  run_end_encoded.json
test/doctest_better_junit/: CMakeLists.txt
test/doctest_better_junit/include/: junit.hpp  junit_xml_writer.hpp
test/doctest_better_junit/src/: junit.cpp
test/integration/: CMakeLists.txt  c_data_integration.cpp  c_data_integration.hpp  test_c_data_integration.cpp
test/json_reader/: CMakeLists.txt  test_json_reader.cpp
test/resources/jsons/: decimal.json  decimal128.json  decimal256.json  dictionary-nested.json  dictionary.json  duration.json  nested.json  nested_large_offsets.json  union.json
(+354 files in other folders)
